Fixed overflow problem
Overflow problem between side bar and content within the middle has been fixed.

Also fixed font and centering issues with Education section. Will add courses section soon.

--- a/css/main_page.css
+++ b/css/main_page.css
@@ -26,7 +26,7 @@ Defines the sections of the page
 .page-select > a{
     text-transform: capitalize;
     font-style: italic;
-    font-size: 1.5vw;
+    font-size: 1.5vmax;
     color:white;
     text-align: center;
     text-decoration: none;
@@ -54,7 +54,7 @@ Defines the sections of the page
     .page-select a{
         text-transform: capitalize;
         font-style: italic;
-        font-size: 3vh;
+        font-size: 3vmin;
         color:white;
         text-align: center;
         text-decoration: none;
@@ -85,23 +85,22 @@ Defines the sections of the page
     left: 30%;
     width: 100%; 
     height: 85%;
-    color: white;
     
 }
 
 .content{
-    max-width: 1100px;
+    max-width: 70%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    color: rgb(240, 237, 207);
+    color: white;
 }
 
 .content > p{
     text-transform: none;
     color: white;
-    font-size: 3vh;
+    font-size: 3vmin;
 }
 
 
@@ -174,87 +173,57 @@ Defines the sections of the page
     flex-direction: row;
     align-items: center;
     color: #90dbd3;
+    font-size: 1.5vmin;
 }
 
 ion-icon {
     
     color: #90dbd3;
-
 }
 
+
+section > h2{ /* Section header size essentially */
+    font-size: 3.5vh;
+}
+
+/* Next Section is for the Education part */
+
+
+#education {
+    font-size: 3vh;
+    color: white;
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+}
+
+#education > ul {
+    line-height: 1.3;
+}
 
 
 .school {
   
     display:flex;
     flex-direction:row;
-    font-style: bold;
-    width: 100%;
-    
-    color: white;
-    height: 100%;
-    top: 20%;
-}
-
-.school > p{
-    margin-top:0;
+    justify-content: space-between;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+   
 
 }
 
-#loc{
+.program{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
     font-style: italic;
-    
-    right: 0%;
+    margin: 0;
+    padding: 0;
 }
 
-.awards{
-    
-    font-size: 3vh;
-    color: white;
-    width: 100%;
-    height: 100%;
 
-}
-
-.awards > p{
-    
-    top: 2%;
-    font-style: italic;
-}
-
-.awards > ul{
-    
-    width: 100%;
-    height: 100%;
-    top: 6%;
-    
-}
-
-#two{
-    height: 100%;
-    top: 45%;
-}
-
-#two > .awards > ul{
-    
-    top: 2%;
-}
-
-#uni {
-    
-    width: 40%;
-    height: 30%;
-
-    bottom: 5%;
-}
-
-#second{
-    
-    width: 40%;
-    height: 30%;
-    right: 0%;
-    bottom: 5%;
-}
 
 .work {
     
